--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -2,4 +2,14 @@
     padding: 5.6vw;
     min-height: 80vh;
     background-image: url(../images/hero_desktop.jpeg);
+
+    &__content {
+        max-width: 640px;
+
+        &__branding {
+            max-width: 320px;
+            margin: 0 auto 38px;
+
+        }
+    }
 }
