--- a/src/styles/_shows.scss
+++ b/src/styles/_shows.scss
@@ -30,14 +30,15 @@
             color: variaveis.$secondaryTextColor;
             font-size: 20px;
             border: none;
-            border-bottom: 5px solid variaveis.$secondaryTextColor;
             padding-bottom: 5px;
             background: none;
             text-transform: uppercase;
             margin: 0 1vw;
+            cursor: pointer;
+            border-bottom: 5px solid transparent;
 
             &--is-active {
-                
+                border-color: variaveis.$secondaryTextColor;
             }
         }
     }
