--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -66,3 +66,16 @@ body {
     color: variaveis.$secondaryTextColor;
     text-decoration: underline;
 }
+
+.button {
+    display: block;
+    width: 100%;
+    height: 60px;
+    font-size: 18px;
+    color: variaveis.$secondaryTextColor;
+    background-color: #6421ff;
+    text-transform: uppercase;
+    border-radius: 4px;
+    margin-top: 2vw;
+    margin-bottom: 8px;
+}
