--- a/src/styles/_faq.scss
+++ b/src/styles/_faq.scss
@@ -37,11 +37,16 @@
                 overflow: hidden;
                 padding: 0 24px;
                 transition: height, .5s ease;
+
+                P {
+                    padding-bottom: 8px;
+                }
             }
 
             &--is-open {
                 .faq__questions__item__question::after {
                     content: '-';
+                    font-size: 40px;               
                 }
 
                 .faq__questions__item__answer {
