--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -18,6 +18,10 @@
 
     &__links {
         margin-bottom: 16px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-wrap: wrap;
 
         &__item {
             display: inline-block;
@@ -36,5 +40,30 @@
 
     p {
         margin-bottom: 16px;
+    }
+}
+
+.language-selector {
+    display: flex;
+    align-items: center;
+
+    img {
+        height: 18px;
+        width: 18px;
+    }
+
+    select {
+        background-color: transparent;
+        border: none;
+        color: variaveis.$principalTextColor;
+        height: 38px;
+
+        &:hover {
+            color: variaveis.$secondaryTextColor;
+        }
+
+        option {
+            color: variaveis.$backgroundColor;
+        }
     }
 }
