start header creation

--- a/src/styles/_variaveis.scss
+++ b/src/styles/_variaveis.scss
@@ -1,3 +1,6 @@
 $backgroundColor: #040714;
 $principalTextColor: silver;
 $secondaryTextColor: #f9f9f9;
+$primaryButtonColor: #6421ff;
+$secondaryButtonColor: #0063e5;
+$darkButtonColor: #000;
