--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,6 +5,7 @@
 @use 'available-devices';
 @use 'faq';
 @use 'footer';
+@use 'header';
 
 @font-face {
     font-family: Avenir;
@@ -23,6 +24,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: Avenir, sans-serif;
+    list-style: none;
 }
 
 body {
@@ -76,11 +78,20 @@ body {
     height: 60px;
     font-size: 18px;
     color: variaveis.$secondaryTextColor;
-    background-color: #6421ff;
+    background-color: variaveis.$primaryButtonColor;
     text-transform: uppercase;
     border-radius: 4px;
-    margin-top: 2vw;
-    margin-bottom: 8px;
+    text-decoration: none;
+    padding: 8px 14px;
+    letter-spacing: 1px;
+
+    &--secondary {
+        background-color: variaveis.$secondaryButtonColor;
+    }
+
+    &--dark {
+        background-color: rgba(variaveis.$darkButtonColor, 0.8);
+    }
 }
 
 .image-text-section {
