--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -1,4 +1,8 @@
 .header {
+    position: sticky;
+    top: 0;
+    left: 0;
+
     &__container {
         padding: 8px 36px;
         display: flex;
@@ -9,6 +13,7 @@
     &__logo {
         max-width: 80px;
         width: 100%;
+        margin: 5px;
     }
 
     &__links {
@@ -18,4 +23,10 @@
             margin: 5px;
         }
     }
+
+    .button {
+        height: 50px;
+
+    }
 }
+
