--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -1,7 +1,25 @@
+@use 'variaveis';
+
 .header {
     position: sticky;
     top: 0;
     left: 0;
+    background-color: variaveis.$backgroundColor;
+    transition: background-color .5s ease;
+    z-index: 1;
+
+    &--is-hidden {
+        background-color: transparent;
+        transition: background-color .5s ease;
+
+        .header {
+            &__logo, &__links__item:first-child {
+                opacity: 0;
+                visibility: hidden;
+                transition: opacity .5s ease;
+            }
+        }
+    }
 
     &__container {
         padding: 8px 36px;
@@ -14,6 +32,7 @@
         max-width: 80px;
         width: 100%;
         margin: 5px;
+        transition: opacity .5s ease;
     }
 
     &__links {
@@ -21,6 +40,7 @@
 
         &__item {
             margin: 5px;
+            transition: opacity .5s ease;
         }
     }
 
@@ -29,4 +49,3 @@
 
     }
 }
-
