--- a/src/styles/_shows.scss
+++ b/src/styles/_shows.scss
@@ -31,6 +31,12 @@
         display: flex;
         justify-content: center;
 
+        @media (max-width: 768px) {
+            white-space: nowrap;
+            overflow-x: scroll;
+            padding-left: 20px;
+        }
+
         &__button {
             color: variaveis.$secondaryTextColor;
             font-size: 20px;
@@ -44,6 +50,10 @@
 
             &--is-active {
                 border-color: variaveis.$secondaryTextColor;
+            }
+
+            @media (max-width: 768px) {
+                font-size: 16px;
             }
         }
     }
